--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Mi Spotify</title>
+    <title>Ariel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="logo">
             <i class="fab fa-spotify"></i>
-            <h1>Mi Spotify</h1>
+            <h1>Ariel</h1>
         </div>
         <div class="search-container" id="search-container">
             <div class="search-bar">
@@ -105,4 +105,5 @@
     <!-- Enlace al archivo JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
